--- a/sass/_training.scss
+++ b/sass/_training.scss
@@ -31,7 +31,7 @@
   }
 }
 
-.view-ws-view-training-next-tuesday {
+.view-cc-view-training-plan-upcoming {
   .view-empty {
     max-width: 63rem;
     margin-right: auto;
